added swagger confiuguration to project

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
     <title>The HTML5 Herald</title>
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
-
+    <style>
+        body {
+            background: rgb(153, 102, 255);
+        }
+    </style>
 </head>
 
 <body>
@@ -15,7 +19,10 @@
     <button onClick="UNFTC._init_()">
         init
     </button>
-
+    <button onClick="UNFTC._downloadImage_()">
+        download
+    </button>
+    <div id="drawing"></div>
 
 </body>
 
